tests/NormalTests/paczka1/fuzzy1/55418716.err
Error in line 9: a6y S598 59,7
Error in line 11: quw2iteazml S684 97,4
Error in line 16: s3k38 S598 4,7
Error in line 28: quw2iteazml S687 24,9
